--- a/comemo.HTML
+++ b/comemo.HTML
@@ -20,14 +20,16 @@
     }
 
     .card {
-      width: 9cm;
-      height: 6cm;
-      margin-right: 0.5cm;
-      margin-bottom: 0.5cm;
-      display: inline-block;
-      background-repeat: no-repeat;
-      background-size: contain;
-      cursor: pointer;
+  width: 9cm;
+  height: 6cm;
+  margin-right: 0.5cm;
+  margin-bottom: 0.5cm;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: contain;
+  cursor: pointer;
+  background-color: black;
+  background-position: center center;
     }
 
     #restart-button {
